# genesys-dice-parser

./: Cargo.toml  README.md
src/: dice.rs  dice_roll.rs  lib.rs
