[package]
name = "genesys-dice-command-parser"
version = "0.1.1"
description = "A library for parsing basic Genesys dice roll commands"
authors = ["Arran France <arran@arranfrance.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/arranf/dice-command-parser"
readme = "README.md"
keywords = ["dnd", "dice", "parser", "ttrpg"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.1"
thiserror = "1.0.31"